--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="header">Discover hidden places in the world around you</h1>
         <p><a  class="toplink" href="#">Download Excursions (Coming Soon!)</a></p>
-        <video autoplay loop>
+        <video autoplay muted loop>
             <source src="./resources/excursion.mp4" type="video/mp4">
         </video>
         <h1 class="header">Your personal travel guide</h1>
